--- a/style.css
+++ b/style.css
@@ -662,10 +662,10 @@ span {
         margin: 5rem 4rem;
     }
     .home-content h3{
-        font-size: 2.6rem;
+        font-size: 2rem;
     }
     .home-content h1{
-        font-size: 8rem;
+        font-size: 6rem;
         margin-top: 3rem;
     }
     .home-content p {
@@ -680,5 +680,11 @@ span {
     }
     .skills-container {
         grid-template-columns: repeat(1,1fr);
+    }
+    .home h2 ,.skills h2,.education h2,.projects h2,.contact h2 {
+        font-size: 6rem;
+    }
+    .project-item h2{
+        font-size: 4rem;
     }
 }
