--- a/style.css
+++ b/style.css
@@ -119,12 +119,7 @@ span {
                  0 0 50px var(--main-color),
                  0 0 100px var(--main-color);
 }
-.home-content p {
-    font-size: 1.6rem;
-    font-weight: 500;
-    line-height: 1.8;
-    max-width: 1000px;
-}
+
 .social-icons a {
     display: inline-flex;
     justify-content: center;
@@ -255,17 +250,118 @@ span {
         width: calc(100% + 8px);
     }
 }
+/* About Me */
+.about {
+    background-color: var(--second-bg-color);
+}
+
+.about-container{
+display: grid;
+grid-template-columns: 1fr 1fr;
+gap: 15rem;
+}
+
+.about-content p {
+    margin-top: 100px;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.8;
+    max-width: auto;
+    text-align: justify;
+}
+
+.about-panel{
+    height: 400px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: start;
+}
+
+.card {
+    width: 80px;
+    border-radius: .75rem;
+    background-size: cover;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 2rem;
+    margin: 0 10px;
+    display: flex;
+    align-items: flex-end;
+    transition: .6s cubic-bezier(.28,-0.03,0,.99);
+    box-shadow: 0px 10px 30px -5px var(--main-color);
+}
+
+.card>.row {
+    color: white;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.card > .row > .icon {
+    background: none;
+    color: white;
+    border-radius: 50%;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+}
+.card > .row > .description {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    height: 80px;
+    width: 570px;
+    opacity: 0;
+    transform: translateY(30px);
+    transition-delay: .3s;
+    transition: all .3s ease;
+}
+.description p{
+    color: var(--text-color);
+    padding-top: 5px;
+}
+.description h4 {
+    margin-left: 10px;
+    text-transform: uppercase;
+}
+.about-panel input {
+    display: none;
+}
+.about-panel input:checked + label{
+    width: 350px;
+}
+.about-panel input:checked + label .description{
+    opacity: 1 !important;
+    transform: translateY(0) !important; 
+}
+.card[for='c1'] {
+    background-image: url(./assets/me.JPEG);
+}
+.card[for='c2'] {
+    background-image: url(./assets/akatsuki1.png);
+}
+.card[for='c3'] {
+    background-image: url(./assets/bike.jpg);
+}
+.card[for='c4'] {
+    background-image: url(./assets/loml.JPG);
+}
+
+
 
 /* Education starts here */
 
 .heading {
-    font-size: 8rem;
+    font-size: 5rem;
     text-align: center;
     margin: 5rem 0;
 }
 .education {
     padding: 100px 15px;
-    background: var(--second-bg-color);
+    background: var(--bg-color);
 }
 .education h2 {
     margin-bottom: 5rem;
@@ -357,7 +453,7 @@ span {
 
 }
 .skills {
-    background: var(--bg-color);
+    background: var(--second-bg-color);
     color: #000;
 }
 .skills h2 {
@@ -437,7 +533,7 @@ span {
 /* Projects starts here */
 
 .projects {
-    background: var(--second-bg-color);
+    background: var(--bg-color);
 }
 .projects-box {
     background-size: cover;
@@ -496,7 +592,7 @@ span {
     font-size: 1.3rem;
 }
 .contact {
-    background-color: var(--bg-color);
+    background-color: var(--second-bg-color);
 }
 .contact h2 {
     margin-bottom: 3rem;
@@ -543,7 +639,7 @@ span {
     bottom: 0;
     width: 100%;
     padding: 40px 0;
-    background-color: var(--second-bg-color);
+    background-color: var(--bg-color);
 }
 .footer .social {
     text-align: center;
@@ -643,6 +739,9 @@ span {
 }
 
 @media(max-width:895px) {
+    .header{
+        width: 55%;
+    }
     #menu-icon {
         display: block;
     }
@@ -663,24 +762,45 @@ span {
         margin: 3rem 0;
         color: white;
     }
+    
     .home {
         flex-direction: column-reverse;
         margin: 5rem 20rem;
     }
+
     .home-content h3{
         font-size: 2rem;
+
     }
     .home-content h1{
         font-size: 6rem;
-        margin-top: 3rem;
+        margin-top: 0;
     }
-    .home-content p {
-        max-width: 600px;
-        margin: 0 auto;
-    }
+
     .home-img img{
         width: 56vw;
     }
+    
+    .about-container{
+        grid-template-columns: auto;
+        width: 50%;
+    }
+
+    .about-panel {
+        margin-left: 20px;
+        width: 50%;
+    }
+    .card {
+        background-size: 100% 100% 1%;
+        background-repeat: no-repeat;
+        height: 30vh;
+    }
+    .about-content p{
+        margin-top: 0;
+        width: 50%;
+        margin-left: 20px;
+    }
+
     .skills h2{
         margin-bottom: 3rem;
     }
